--- a/article.html
+++ b/article.html
@@ -25,22 +25,44 @@
             </ul>
         </header>
         <main>
-            <h2>
-                Manchester is the real tech capital of the UK
-            </h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
-            </p>
-            <p>      
-                Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Dis parturient montes nascetur ridiculus. Et malesuada fames ac turpis egestas sed tempus urna. Tellus pellentesque eu tincidunt tortor aliquam nulla. Elit duis tristique sollicitudin nibh sit amet commodo nulla. Massa sapien faucibus et molestie ac feugiat sed. Velit ut tortor pretium viverra suspendisse potenti nullam ac. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Et ultrices neque ornare aenean. Neque ornare aenean euismod elementum nisi. Sem viverra aliquet eget sit amet tellus cras adipiscing enim. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Vestibulum lectus mauris ultrices eros. Malesuada fames ac turpis egestas. Duis convallis convallis tellus id. Turpis nunc eget lorem dolor sed viverra ipsum nunc.
-            </p>     
-                Orci ac auctor augue mauris. Convallis a cras semper auctor neque vitae tempus. Maecenas volutpat blandit aliquam etiam erat. Nulla at volutpat diam ut venenatis tellus in. Molestie a iaculis at erat pellentesque adipiscing commodo elit. Sed viverra ipsum nunc aliquet bibendum. Sed vulputate mi sit amet mauris commodo quis imperdiet. Sem viverra aliquet eget sit amet. Semper eget duis at tellus at. Sit amet volutpat consequat mauris. Eu augue ut lectus arcu bibendum at varius vel pharetra. Iaculis urna id volutpat lacus laoreet.
-            <p> 
-                Et malesuada fames ac turpis egestas sed tempus urna. Adipiscing bibendum est ultricies integer quis auctor elit sed. Arcu dictum varius duis at consectetur lorem donec. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Amet massa vitae tortor condimentum lacinia quis vel. Vivamus at augue eget arcu dictum varius. Nam aliquam sem et tortor consequat id porta nibh venenatis. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Fermentum iaculis eu non diam phasellus vestibulum lorem sed. Non sodales neque sodales ut. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Accumsan lacus vel facilisis volutpat est velit egestas dui id. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Vitae sapien pellentesque habitant morbi. Faucibus purus in massa tempor nec feugiat nisl pretium fusce. Pharetra massa massa ultricies mi quis hendrerit dolor. Dictum non consectetur a erat nam at lectus urna. Tincidunt arcu non sodales neque sodales ut. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Sit amet tellus cras adipiscing.
-            </p>
+            <article>
+                <section>
+                    <h2>
+                        Manchester is the real tech capital of the UK
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
+                    </p>
+                    <p>      
+                        Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Dis parturient montes nascetur ridiculus. Et malesuada fames ac turpis egestas sed tempus urna. Tellus pellentesque eu tincidunt tortor aliquam nulla. Elit duis tristique sollicitudin nibh sit amet commodo nulla. Massa sapien faucibus et molestie ac feugiat sed. Velit ut tortor pretium viverra suspendisse potenti nullam ac. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Et ultrices neque ornare aenean. Neque ornare aenean euismod elementum nisi. Sem viverra aliquet eget sit amet tellus cras adipiscing enim. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Vestibulum lectus mauris ultrices eros. Malesuada fames ac turpis egestas. Duis convallis convallis tellus id. Turpis nunc eget lorem dolor sed viverra ipsum nunc.
+                    </p>
+                    <figure>
+                        <img src="http://www.photoeverywhere.co.uk/britain/manchester/17-manchestercathedral.jpg"/>
+                        <figcaption>Manchester skyline</figcaption>
+                    </figure> 
+                        Orci ac auctor augue mauris. Convallis a cras semper auctor neque vitae tempus. Maecenas volutpat blandit aliquam etiam erat. Nulla at volutpat diam ut venenatis tellus in. Molestie a iaculis at erat pellentesque adipiscing commodo elit. Sed viverra ipsum nunc aliquet bibendum. Sed vulputate mi sit amet mauris commodo quis imperdiet. Sem viverra aliquet eget sit amet. Semper eget duis at tellus at. Sit amet volutpat consequat mauris. Eu augue ut lectus arcu bibendum at varius vel pharetra. Iaculis urna id volutpat lacus laoreet.
+                    <p> 
+                        Et malesuada fames ac turpis egestas sed tempus urna. Adipiscing bibendum est ultricies integer quis auctor elit sed. Arcu dictum varius duis at consectetur lorem donec. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Amet massa vitae tortor condimentum lacinia quis vel. Vivamus at augue eget arcu dictum varius. Nam aliquam sem et tortor consequat id porta nibh venenatis. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Fermentum iaculis eu non diam phasellus vestibulum lorem sed. Non sodales neque sodales ut. Nulla aliquet porttitor lacus luctus accumsan tortor posuere. Accumsan lacus vel facilisis volutpat est velit egestas dui id. Amet consectetur adipiscing elit duis tristique sollicitudin nibh sit amet. Vitae sapien pellentesque habitant morbi. Faucibus purus in massa tempor nec feugiat nisl pretium fusce. Pharetra massa massa ultricies mi quis hendrerit dolor. Dictum non consectetur a erat nam at lectus urna. Tincidunt arcu non sodales neque sodales ut. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Sit amet tellus cras adipiscing.
+                    </p>
+                </section>
+                <section>
+                    <h3>
+                        Author
+                    </h3>
+                    <figure>
+                        <img src="https://avatars2.githubusercontent.com/u/16289267?s=460&v=4"/>
+                        <figcaption>
+                            <h4>Vitnija Bluzma</h4>
+                        </figcaption>
+                    </figure>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi. 
+                    </p>
+                </section>
+            </article>
         </main>
         <footer>
-
+            &copy; Manchester Morning News
         </footer>
     </body>
 </html>
