added img cropping

--- a/article.html
+++ b/article.html
@@ -38,7 +38,9 @@
                     Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Dis parturient montes nascetur ridiculus. Et malesuada fames ac turpis egestas sed tempus urna. Tellus pellentesque eu tincidunt tortor aliquam nulla. Elit duis tristique sollicitudin nibh sit amet commodo nulla. Massa sapien faucibus et molestie ac feugiat sed. Velit ut tortor pretium viverra suspendisse potenti nullam ac. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Et ultrices neque ornare aenean. Neque ornare aenean euismod elementum nisi. Sem viverra aliquet eget sit amet tellus cras adipiscing enim. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Vestibulum lectus mauris ultrices eros. Malesuada fames ac turpis egestas. Duis convallis convallis tellus id. Turpis nunc eget lorem dolor sed viverra ipsum nunc.
                 </p>
                 <figure>
-                    <img src="http://www.photoeverywhere.co.uk/britain/manchester/17-manchestercathedral.jpg"/>
+                    <div class="img-container">
+                        <img src="http://www.photoeverywhere.co.uk/britain/manchester/17-manchestercathedral.jpg"/>
+                    </div>
                     <figcaption>Manchester skyline</figcaption>
                 </figure> 
                     Orci ac auctor augue mauris. Convallis a cras semper auctor neque vitae tempus. Maecenas volutpat blandit aliquam etiam erat. Nulla at volutpat diam ut venenatis tellus in. Molestie a iaculis at erat pellentesque adipiscing commodo elit. Sed viverra ipsum nunc aliquet bibendum. Sed vulputate mi sit amet mauris commodo quis imperdiet. Sem viverra aliquet eget sit amet. Semper eget duis at tellus at. Sit amet volutpat consequat mauris. Eu augue ut lectus arcu bibendum at varius vel pharetra. Iaculis urna id volutpat lacus laoreet.
