--- a/article.html
+++ b/article.html
@@ -12,10 +12,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href='#'>Home</a>
+                        <a href='index.html'>Home</a>
                     </li>
                     <li>
-                        <a href='#'>News</a>
+                        <a href='index.html'>News</a>
                     </li>
                     <li>
                         <a href='#'>Weather</a>
