added weather and classifieds

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                     <li>
                         <a href='index.html'>Home</a>
                     </li><li>
-                        <a href='index.html'>News</a>
+                        <a href='news.html'>News</a>
                     </li><li>
-                        <a href='#'>Weather</a>
+                        <a href='weather.html'>Weather</a>
                     </li><li>
-                        <a href='#'>Classifieds</a>
+                        <a href='classifieds.html'>Classifieds</a>
                     </li>
                 </ul>
             </nav>
@@ -28,27 +28,118 @@
                 <h2>
                     News
                 </h2>
-                <section>
-                        <figure>
-                            <div class="img-container">
-                                <img src="http://www.photoeverywhere.co.uk/britain/manchester/17-manchestercathedral.jpg"/>
+                    <section>
+                            <figure>
+                                <div class="img-container">
+                                    <img src="http://www.photoeverywhere.co.uk/britain/manchester/17-manchestercathedral.jpg"/>
+                                </div>
+                            </figure>
+                            <div class="news-preview-text">
+                                <h3>
+                                        Manchester is the real tech capital of the UK
+                                </h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
+                                </p>
+                                <a href="article.html">
+                                    <button>
+                                        Read article
+                                    </button>
+                                </a>
                             </div>
-                        </figure>
-                        <div class="news-preview-text">
-                            <h3>
-                                    Manchester is the real tech capital of the UK
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
-                            </p>
-                            <a href="article.html">
-                                <button>
-                                    Read article
-                                </button>
-                            </a>
-                        </div>
-                </section>
+                    </section>
             </article>
+            <article>
+                <h2>
+                    Weather
+                </h2>
+                <a href='weather.html'>
+                    <section>
+                            <figure class='weather'>
+                                <div id="cont_8d676dd4d7da1ce02d7bde702e5377e8">
+                                        <script type="text/javascript" async src="https://www.yourweather.co.uk/wid_loader/8d676dd4d7da1ce02d7bde702e5377e8"></script>
+                                </div>
+                            </figure>
+                    </section>
+                </a>
+            </article>
+            <article class='classifieds'>
+                    <h2>
+                        Classifieds
+                    </h2>
+                        <section>
+                                <figure>
+                                    <div class="img-container" >
+                                        <img src='http://placekitten.com/300/300' />
+                                    </div>
+                                </figure>
+                                <div class="news-preview-text">
+                                    <h3>
+                                        For sale!
+                                    </h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
+                                    </p>
+                                    <button>
+                                            View Ad
+                                    </button>
+                                </div>
+                        </section>
+                        <section>
+                                <figure>
+                                    <div class="img-container" >
+                                        <img src='http://placekitten.com/300/300' />
+                                    </div>
+                                </figure>
+                                <div class="news-preview-text">
+                                    <h3>
+                                        For sale!
+                                    </h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
+                                    </p>
+                                    <button>
+                                            View Ad
+                                    </button>
+                                </div>
+                        </section>
+                        <section>
+                                <figure>
+                                    <div class="img-container" >
+                                        <img src='http://placekitten.com/300/300' />
+                                    </div>
+                                </figure>
+                                <div class="news-preview-text">
+                                    <h3>
+                                        For sale!
+                                    </h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
+                                    </p>
+                                    <button>
+                                            View Ad
+                                    </button>
+                                </div>
+                        </section>
+                        <section>
+                                <figure>
+                                    <div class="img-container" >
+                                        <img src='http://placekitten.com/300/300' />
+                                    </div>
+                                </figure>
+                                <div class="news-preview-text">
+                                    <h3>
+                                        For sale!
+                                    </h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla. A lacus vestibulum sed arcu. Non enim praesent elementum facilisis leo vel. Ut diam quam nulla porttitor massa id neque. Euismod nisi porta lorem mollis. Mus mauris vitae ultricies leo integer. Lectus mauris ultrices eros in cursus turpis. Mattis vulputate enim nulla aliquet porttitor lacus luctus. Blandit libero volutpat sed cras ornare arcu dui vivamus. Semper quis lectus nulla at volutpat diam ut. Massa eget egestas purus viverra accumsan in nisl nisi.
+                                    </p>
+                                    <button>
+                                            View Ad
+                                    </button>
+                                </div>
+                        </section>
+                </article>
         </main>
         <footer>
             &copy; Manchester Morning News
