--- a/article.html
+++ b/article.html
@@ -14,11 +14,11 @@
                     <li>
                         <a href='index.html'>Home</a>
                     </li><li>
-                        <a href='index.html'>News</a>
+                        <a href='news.html'>News</a>
                     </li><li>
-                        <a href='#'>Weather</a>
+                        <a href='weather.html'>Weather</a>
                     </li><li>
-                        <a href='#'>Classifieds</a>
+                        <a href='classifieds.html'>Classifieds</a>
                     </li>
                 </ul>
             </nav>
